Add some discussion

--- a/worksheets/worksheet5_soln.ipynb
+++ b/worksheets/worksheet5_soln.ipynb
@@ -21,33 +21,62 @@
     "\n",
     "It simulates a vending machine, and is similar to a project assigned in MCS 260 in Fall 2020.  Run it, use the \"help\" command in its text interface to learn about the available commands, and try them out.\n",
     "\n",
-    "This script has a bug which affects certain purchases.  For example, try starting the script and depositing \\$1.15 as four quarters, one dime, and one nickel, and then selecting item 4 (costing \\$1.10).  The expected behavior would be: The item is purchased, and \\$0.05 is given in change.  Instead, the script will get stuck (and may require you to press Control-C in the terminal to exit).\n",
+    "This script has a bug which affects certain purchases.  For example, try starting the script and depositing \\\\$1.15 as four quarters, one dime, and one nickel, and then selecting item 4 (costing \\\\$1.10).  The expected behavior would be: The item is purchased, and \\\\$0.05 is given in change.  Instead, the script will get stuck (and may require you to press Control-C in the terminal to exit).\n",
     "\n",
     "Debug the program using an active debugging technique (`print(...)` or `pdb`) and find the cause of the infinite loop that prevents the program from executing as intended.  Devise and test a fix."
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### First solution: Minimal change\n",
+    "\n",
+    "The problem is that the given program stores the current credit as a float, and float addition is not exact.  For example, in Python\n",
+    "```\n",
+    "0.1 + 0.05 == 0.15\n",
+    "```\n",
+    "evaluates to `False`!  But `0.01+0.05` and `0.15` are quite close.\n",
+    "\n",
+    "A minimal correction to the broken vending machine program would replace a check like `cents == 0` with one that only looks for `cents` to be **near** zero, allowing for a small amount of floating point error.\n",
+    "\n",
+    "The code below does that.  It would be hard to verify the correctness of this program, however.  How do we know that the error won't accumulate over time and eventually be large enough to fail even the approximate equality test?  \n",
+    "\n",
+    "**In real programs, you should never use floats for financial calculations.**\n",
+    "\n",
+    "(Also, like the broken code provided in the worksheet, this patched version uses the variable name `cents` for the current credit *in dollars*.  The misleading variable name was not intentional---Professor Dumas simply forgot to change the name when he added a bug to a working version of the program.)"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
       "CREDIT: $0.00\n",
+      ">q\n",
       "CREDIT: $0.25\n",
+      ">q\n",
       "CREDIT: $0.50\n",
+      ">q\n",
       "CREDIT: $0.75\n",
+      ">q\n",
       "CREDIT: $1.00\n",
+      ">d\n",
       "CREDIT: $1.10\n",
+      ">d\n",
       "CREDIT: $1.20\n",
+      ">n\n",
       "CREDIT: $1.25\n",
+      ">4\n",
       "VEND: Dehydrated garlic slices\n",
       "RETURN: dime\n",
       "RETURN: nickel\n",
       "CREDIT: $0.00\n",
-      "CREDIT: $0.25\n"
+      ">exit\n"
      ]
     }
    ],
@@ -173,6 +202,166 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Second solution: Use integers everywhere\n",
+    "\n",
+    "A correction that involves more code changes---but which is guaranteed to behave correctly no matter how many arithmetic operations are performed---is to never store anything as a float, but instead to work with prices as integers, measured in cents."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CREDIT: $0.00\n",
+      ">q\n",
+      "CREDIT: $0.25\n",
+      ">q\n",
+      "CREDIT: $0.50\n",
+      ">q\n",
+      "CREDIT: $0.75\n",
+      ">q\n",
+      "CREDIT: $1.00\n",
+      ">d\n",
+      "CREDIT: $1.10\n",
+      ">d\n",
+      "CREDIT: $1.20\n",
+      ">n\n",
+      "CREDIT: $1.25\n",
+      ">4\n",
+      "VEND: Dehydrated garlic slices\n",
+      "RETURN: dime\n",
+      "RETURN: nickel\n",
+      "CREDIT: $0.00\n",
+      ">exit\n"
+     ]
+    }
+   ],
+   "source": [
+    "\"\"\"Patched vending machine simulator\"\"\"\n",
+    "# MCS 275 Spring 2021 Week 5 Problem 1\n",
+    "# David Dumas\n",
+    "\n",
+    "import sys\n",
+    "\n",
+    "# Mapping from coin add commands to values (in cents)\n",
+    "coin_values = { \n",
+    "    \"quarter\": 25,\n",
+    "    \"q\": 25,\n",
+    "    \"dime\": 10,\n",
+    "    \"d\": 10,\n",
+    "    \"nickel\": 5,\n",
+    "    \"n\": 5\n",
+    "}\n",
+    "\n",
+    "# Starting inventory.  Prices in cents.\n",
+    "inventory = [\n",
+    "    { \"stock\":6, \"price\": 125, \"name\": \"Cheesy dibbles\" },\n",
+    "    { \"stock\":8, \"price\": 130, \"name\": \"Slice of cake\" },\n",
+    "    { \"stock\":10, \"price\": 75, \"name\": \"Rock candy\" },\n",
+    "    { \"stock\":5, \"price\": 150, \"name\": \"Single leaf of lettuce\" },\n",
+    "    { \"stock\":5, \"price\": 110, \"name\": \"Dehydrated garlic slices\" },\n",
+    "    { \"stock\":7, \"price\": 90, \"name\": \"Almond cookies\" },\n",
+    "]\n",
+    "\n",
+    "\n",
+    "def dispense_change(cents):\n",
+    "    \"\"\"print lines to simulate return of `cents` cents\"\"\"\n",
+    "    while cents >= 25:\n",
+    "        print(\"RETURN: quarter\")\n",
+    "        cents = cents - 25\n",
+    "    while cents >= 10:\n",
+    "        print(\"RETURN: dime\")\n",
+    "        cents = cents - 10\n",
+    "    while cents >= 5: \n",
+    "        # FIXED Changed comparison to a small positive number, to account for float math.\n",
+    "        # A more permanent fix would require changing cents to be stored as an integer.\n",
+    "        # However, by changing the comparator from !=0 to > 10**-5, the vending machine works.\n",
+    "        print(\"RETURN: nickel\")\n",
+    "        cents = cents - 5\n",
+    "    assert cents==0, \"This vending machine requires all prices to be multiples of $0.05\"\n",
+    "\n",
+    "\n",
+    "def show_inventory(inventory):\n",
+    "    \"\"\"Display the `inventory` (list of dicts) in the format required by \n",
+    "    the project description\n",
+    "    \"\"\"\n",
+    "    for idx,itemdata in enumerate(inventory):\n",
+    "        print(idx,itemdata[\"name\"],\n",
+    "              \"${:.2f} ({} available)\".format(itemdata[\"price\"]/100,\n",
+    "                                              itemdata[\"stock\"]))\n",
+    "\n",
+    "def vend(inventory):\n",
+    "    \"\"\"Run the vending machine simulator with a given `inventory`.\"\"\"    \n",
+    "\n",
+    "    # Determine the maximum price of an item\n",
+    "    maxprice = 0\n",
+    "    for d in inventory:\n",
+    "        if d[\"price\"] > maxprice:\n",
+    "            maxprice = d[\"price\"]\n",
+    "\n",
+    "    invitems = [ str(x) for x in range(len(inventory)) ]\n",
+    "\n",
+    "    # Command loop\n",
+    "    credit = 0\n",
+    "    while True:\n",
+    "        print(\"CREDIT: ${:.2f}\".format(credit/100))\n",
+    "        cmd = input(\">\")\n",
+    "\n",
+    "        if cmd in [\"q\",\"d\",\"n\",\"quarter\",\"dime\",\"nickel\"]:\n",
+    "            # Coin inserted\n",
+    "            if credit >= maxprice:\n",
+    "                print(\"RETURN:\",cmd)\n",
+    "            else:\n",
+    "                credit = credit + coin_values[cmd]\n",
+    "        elif cmd in invitems:\n",
+    "            # Snack purchase request\n",
+    "            i = int(cmd)  # 0-based index\n",
+    "            if inventory[i][\"stock\"] == 0:\n",
+    "                print(\"MSG: Out of stock\")\n",
+    "            elif credit < inventory[i][\"price\"]:\n",
+    "                print(\"MSG: Insufficient credit\")\n",
+    "            else:\n",
+    "                inventory[i][\"stock\"] = inventory[i][\"stock\"] - 1\n",
+    "                print(\"VEND:\",inventory[i][\"name\"])\n",
+    "                dispense_change(credit - inventory[i][\"price\"])\n",
+    "                credit = 0\n",
+    "        elif cmd in [\"inventory\",\"i\"]:\n",
+    "            # Request to display inventory\n",
+    "            show_inventory(inventory)\n",
+    "        elif cmd in [\"return\",\"r\"]:\n",
+    "            # Return current credit\n",
+    "            dispense_change(credit)\n",
+    "            credit = 0\n",
+    "        elif cmd in [\"help\",\"h\"]:\n",
+    "            # Display help\n",
+    "            print(\"Vending machine simulator knows about these commands:\")\n",
+    "            print(\"h or help - show this message\")\n",
+    "            print(\"i or inventory - show numbered list of items available for purchase\")\n",
+    "            print(\"q or quarter - deposit a quarter ($0.25)\")\n",
+    "            print(\"d or dime - deposit a dime ($0.10)\")\n",
+    "            print(\"n or nickel - deposit a nickel ($0.05)\")\n",
+    "            print(\"r or return - return all credit currently in machine\")\n",
+    "            print(\"0, 1, 2, ... - buy an item by number\")\n",
+    "        elif cmd == \"exit\":\n",
+    "            # exit the simulation\n",
+    "            return\n",
+    "        else:\n",
+    "            # Unknown command\n",
+    "            print(\"Unknown command: {}\".format(cmd))\n",
+    "\n",
+    "if __name__ == \"__main__\":\n",
+    "    # Start the simulation.\n",
+    "    vend(inventory)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### 2. Misbehaving function\n",
     "\n",
     "The function below is supposed to compute the character histogram of a string, with the option to update an existing histogram so that a large text can be processed in chunks.  However, it doesn't work: As you'll see form the example code, it doesn't start from a blank histogram in some cases.  Why not?\n",
@@ -234,10 +423,15 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
-      "Histogram of 'first line example':\n{'f': 1, 'i': 2, 'r': 1, 's': 1, 't': 1, 'l': 2, 'n': 1, 'e': 3, 'x': 1, 'a': 1, 'm': 1, 'p': 1}\nHistogram of previous line and 'renewed interest in debugging':\n{'f': 1, 'i': 5, 'r': 3, 's': 2, 't': 3, 'l': 2, 'n': 5, 'e': 9, 'x': 1, 'a': 1, 'm': 1, 'p': 1, 'w': 1, 'd': 2, 'b': 1, 'u': 1, 'g': 3}\nHistogram of the word 'Mississippi':\n{'M': 1, 'i': 4, 's': 4, 'p': 2}\n"
+      "Histogram of 'first line example':\n",
+      "{'f': 1, 'i': 2, 'r': 1, 's': 1, 't': 1, 'l': 2, 'n': 1, 'e': 3, 'x': 1, 'a': 1, 'm': 1, 'p': 1}\n",
+      "Histogram of previous line and 'renewed interest in debugging':\n",
+      "{'f': 1, 'i': 5, 'r': 3, 's': 2, 't': 3, 'l': 2, 'n': 5, 'e': 9, 'x': 1, 'a': 1, 'm': 1, 'p': 1, 'w': 1, 'd': 2, 'b': 1, 'u': 1, 'g': 3}\n",
+      "Histogram of the word 'Mississippi':\n",
+      "{'M': 1, 'i': 4, 's': 4, 'p': 2}\n"
      ]
     }
    ],
@@ -277,6 +471,81 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Discussion\n",
+    "\n",
+    "In Python, default values of function arguments are only evaluated once, at the time the function definition is made.  Every call to that function uses the same object for the default value, so if a mutable data structure is used as the default value, any changes made to the object persist across function calls.\n",
+    "\n",
+    "Compare:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n",
+      "2\n",
+      "2\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Integers are immutable\n",
+    "def f(t=1):\n",
+    "    t+=1  # Creates a new local variable called `t` that is\n",
+    "          # discarded when the function exits\n",
+    "    print(t)\n",
+    "\n",
+    "f()\n",
+    "f()\n",
+    "f()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['aha']\n",
+      "['aha', 'aha']\n",
+      "['aha', 'aha', 'aha']\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Lists are mutable\n",
+    "def g(L=[]):\n",
+    "    L.append(\"aha\")  # Asks the default value, a list object, to\n",
+    "                     # add a new element.  This doesn't create a\n",
+    "                     # local variable, so the change to L persists\n",
+    "                     # across function calls\n",
+    "                       \n",
+    "    print(L)\n",
+    "\n",
+    "g()\n",
+    "g()\n",
+    "g()  "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Because of this, it is usually not a good idea to have a mutable data type (list, dict) as a default value for a function argument if that argument is modified in any way inside the function."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### 3. Tic-tac-toe too easily won\n",
     "\n",
     "Download the program:\n",
@@ -300,8 +569,8 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
       "Tic-tac-toe: enter moves by coordinates (e.g. A1 or B3)\n",
       "\n",
@@ -467,6 +736,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Discussion\n",
+    "\n",
+    "The original code stored the same list object in three different positions in `board`.  The problematic code can be written in an equivalent way that makes the problem more evident:\n",
+    "```\n",
+    "L = [\" \", \" \", \" \"]\n",
+    "board = [L,L,L]  # so board[0], board[1], board[2] all refer to L!\n",
+    "```\n",
+    "which shows `board[1][0] = \"X\"` actually becomes `L[0] = \"X\"`, which changes the single object `L` that appears three times in `board`.\n",
+    "\n",
+    "If the intent is to have each row of the board independently modifiable, we need three different list objects.  The fixed code above does that."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### 4. A semi-chaotic sequence\n",
     "\n",
     "Download the program:\n",
@@ -487,16 +772,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
-    "Answers supplied by Prof. Dumas\n",
+    "Some exploration with the debugger reveals the answers:\n",
     "\n",
     "1. The sum of indices -1 and 0\n",
     "2. 1.401649343059023\n",
     "3. 1. 1024\n",
     "   2. The second return statement (y is 1028, which is not a multiple of 3)"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "markdown",
@@ -521,16 +806,17 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
-      "Backpack: blue with items...\n * Pencil: pink\n"
+      "Backpack: blue with items...\n",
+      " * Pencil: pink\n"
      ]
     },
     {
-     "output_type": "error",
      "ename": "TypeError",
      "evalue": "unsupported operand type(s) for +: 'BackPack' and 'Sandwich'",
+     "output_type": "error",
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
@@ -631,6 +917,16 @@
     "    bp = seuss_book + bp\n",
     "    print(bp)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Reminder\n",
+    "If you're working on this extra challenge, the questions to ask yourself are:\n",
+    "* Why might you expect this program to work?  (The error isn't surprising unless you've read the code and believe you understand what the program is trying to do.)\n",
+    "* What is the program actually doing that is different from your expectation?"
+   ]
   }
  ],
  "metadata": {
@@ -649,7 +945,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5-final"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
