--- a/worksheets/worksheet6.ipynb
+++ b/worksheets/worksheet6.ipynb
@@ -65,9 +65,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "The 1st Great number is 3\nThe 3rd Great number is 2\nThe 10th Great number is 164\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"The 1st Great number is\",great(1))\n",
     "print(\"The 3rd Great number is\",great(3))\n",
@@ -78,38 +86,43 @@
    "source": [
     "For the second part of this problem, you will use memoization. Memo-izing a function allows you to \"save\" previous pairs of inputs and outputs as base cases, so you can use less recursive depth.\n",
     "\n",
-    "For example, suppose you calculate great(3) and then calculate great(5). Fince $G_5$ = $G_4$ - 3*$G_2$, and you have already calculated $G_3$, $G_2$, your function could incorporate these previously calculated values as base cases.\n",
+    "For example, suppose you calculate great(3) and then calculate great(6). Fince $G_6$ = $G_5$ - 3*$G_3$, and you have already calculated $G_3$, your function could incorporate the previously calculated value as a base case.\n",
     "\n",
-    "Write another function called great\\_memo(n) that uses the memoization decorator from decs.py. Compare the performance of both great functions for inputs 1,10,50,100."
+    "Write another function great\\_memo(n) that uses the memoization decorator from decs.py. Compare the performance of both great functions for inputs 1,10,20,30."
    ],
    "cell_type": "markdown",
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
+   "execution_count": 6,
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "\n"
+      "The 1st Great number is 3 3\nThe 10th Great number is 164 164\nThe 50th Great number is -22828 -22828\nThe 50th Great number is -124723 -124723\n"
      ]
     }
    ],
    "source": [
+    "\n",
     "print(\"The 1st Great number is\",great(1), great_memo(1))\n",
     "print(\"The 10th Great number is\",great(10), great_memo(10))\n",
-    "print(\"The 50th Great number is\",great(50), great_memo(50))\n",
-    "print(\"The 100th Great number is\",great(100), great_memo(100))"
+    "print(\"The 50th Great number is\",great(20), great_memo(20))\n",
+    "print(\"The 50th Great number is\",great(30), great_memo(30))"
    ]
   },
   {
    "source": [
-    "## 2. Unique Prime Factorization\n",
+    "## 2. Prime Factorization\n",
     "\n",
-    "A prime number is an integer whose only divisors are 1 and itself. Primes include $2,3,5,7,11,...$ .By the Fundamental Theorem of Algebra, every positive integer $n\\geq 2$ can be factored into a product of primes. The collection of primes is called the unique prime factorization, since it is unique up to reordering.\n",
+    "A prime number is an integer whose only divisors are 1 and itself. Primes include $2,3,5,7,11,...$ \n",
+    "\n",
+    "By the Fundamental Theorem of Algebra, every positive integer $n\\geq 2$ can be factored into a product of primes. The collection of primes is called the unique prime factorization, since it is unique up to reordering.\n",
     "\n",
     "For example,\n",
     "* $ 10 = 2*5$\n",
@@ -117,11 +130,11 @@
     "* $ 45 = 3*3*5$\n",
     "* $ 64 = 2*2*2*2*2*2$ (Note that the same prime may appear multiple times.)\n",
     "\n",
-    "Write a recursive function ufp(n) that, given an integer $n \\geq 2$, returns a list representing the unique prime factorization. Note that the list can contain multiple entries with the same prime number.\n",
+    "Write a recursive function pf(n) that, given an integer $n \\geq 2$, returns a list representing the prime factorization. Note that the list can contain the same prime repeated multiple times.\n",
     "\n",
     "When solving this problem, consider the following...\n",
-    "* What are the base cases? (For what inputs will ufp(n) return a list with one entry?)\n",
-    "* What is the recursive step? (How do we break ufp(n) into pieces which incorporate ufp called on a smaller input?)\n",
+    "* What are the base cases? (For what inputs will pf(n) return a list with one entry?)\n",
+    "* What is the recursive step? (How do we break pf(n) into pieces which incorporate pf called on a smaller input?)\n",
     "\n",
     "Test cases:"
    ],
@@ -130,30 +143,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "The prime factorization of 15 is [5, 3]\nThe prime factorization of 81 is [3, 3, 3, 3]\nThe prime factorization of 17 is [17]\n"
+     ]
+    }
+   ],
    "source": [
-    "print(\"The prime factorization of 15 is\",ufp(15))\n",
-    "print(\"The prime factorization of 81 is\",ufp(81))\n",
-    "print(\"The prime factorization of 17 is\",ufp(17))"
+    "print(\"The prime factorization of 15 is\", pf(15))\n",
+    "print(\"The prime factorization of 81 is\", pf(81))\n",
+    "print(\"The prime factorization of 17 is\", pf(17))"
    ]
   },
   {
    "source": [
-    "The greatest common denominator gcd(a,b) is the largest integer that evenly divides both a and b. One way to calculate the gcd is to use the product of all common prime factors of a and b. Write a function gcd(a,b) that calls your function ufp. \n",
+    "The greatest common denominator $gcd(a,b)$ is the largest integer that evenly divides both $a$ and $b$. One way to calculate the gcd is to use the product of all common prime factors of $a$ and $b$. If $a$ and $b$ share no prime factors, then $gcd(a,b) = 1$.\n",
     "\n",
-    "As an added challenge, can you improve the performance of ufp and gcd using memoization?"
+    "Write a function gcd(a,b) that calculates the greatest common divisor and calls your function pf. (The function does not need to be recursive.)\n",
+    "\n",
+    "As an added challenge, can you improve the performance of pf and gcd using memoization?"
    ],
    "cell_type": "markdown",
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "5\n1\n11\n120\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(gcd(5,500))\n",
+    "print(gcd(17,83))\n",
+    "print(gcd(330,11))\n",
+    "print(gcd(360,240))"
+   ]
   },
   {
    "source": [
@@ -161,15 +197,27 @@
     "\n",
     "A palindrome is a string that is the same forwards and backwards.\n",
     "\n",
-    "An n-palindrome sandwich is a string of the form $AB\\bar A$ where $A$ is a string, $B$ is a string of length n, and $\\bar A$ is $A$ backwards. That is to say that $A\\bar A$ is a palindrome, but $B$ need not be a palindrome. Each of $A$, $B$, and $\\bar A$ must be non-empty, so the shortest 3-palindrome sandwich is of length 5.\n",
+    "A palindrome sandwich is a string of the form $AB\\bar A$ where\n",
+    "* $A$ is a string\n",
+    "* $B$ is a string of length 3, and \n",
+    "* $\\bar A$ is $A$ backwards. \n",
+    "\n",
+    "That is to say $A\\bar A$ is a palindrome, but $A$, $B$ and $\\bar A$ need not be palindromes. $A$ and $\\bar A$ must be non-empty, so the shortest palindrome sandwich has length 5.\n",
     "\n",
     "Examples:\n",
-    "* \"racecar\" is a 1-palindrome sandwich where $A$=\"rac\", $B$=\"e\", and $\\bar A$=\"car\". It's also a 2-, 3-, and 4-palindrome sandwich, since it's a palindrome of length 7.\n",
-    "* \"noHATon\" is a 3-palindrome sandwich where $A$=\"no\", $B$=\"HAT\", and $\\bar A$=\"on\".\n",
-    "* \"goodBYEgood\" is NOT an n-palindrome sandwich for any n.\n",
-    "* \"squirrel\" is NOT an n-palindrome sandwich for any n.\n",
+    "* \"racecar\" is a palindrome sandwich where $A$=\"ra\", $B$=\"cec\", and $\\bar A$=\"ar\".\n",
+    "* \"noHATon\" is a palindrome sandwich where $A$=\"no\", $B$=\"HAT\", and $\\bar A$=\"on\".\n",
     "\n",
-    "Write a recursive function is\\_palindrome3\\_sandwich(s) which determines whether s is an 3-palindrome sandwich. Think: what would be the base case, and what would be the recursive step?\n",
+    "Non-examples:\n",
+    "* \"goodBYEgood\" is NOT a palindrome sandwich, since \"good\" is not \"good\" backwards.\n",
+    "* \"squirrel\" is NOT an palindrome sandwich, since it does not have odd length.\n",
+    "\n",
+    "Write a recursive function is\\_palindrome\\_sandwich(s) which determines whether s is an palindrome sandwich. \n",
+    "\n",
+    "When solving this problem, consider the following...\n",
+    "* How do you isolate $A$, $B$, and $\\bar A$? \n",
+    "* What would be the base case? \n",
+    "* What would be the recursive step?\n",
     "\n",
     "Test cases:\n"
    ],
@@ -178,24 +226,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "True\nTrue\nTrue\nFalse\nFalse\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(is_palindrome_sandwich(\"racecar\"))\n",
+    "print(is_palindrome_sandwich(\"noHATon\"))\n",
+    "print(is_palindrome_sandwich(\"racecarCATracecar\"))\n",
+    "print(is_palindrome_sandwich(\"goodBYEgood\"))\n",
+    "print(is_palindrome_sandwich(\"squirrel\"))"
+   ]
   },
   {
    "source": [
-    "Next, an n-palindrome MULTIsandwich is a string s of the form $AB\\bar A$, where $A$ is $\\bar A$ backwards, and $B$ is a string of length n, but $A$ is either a string or is itself an n-palindrome (multi-)sandwich. The \"level\" of the multisandwich is the number of nested n-palindrome sandwiches, with non-sandwiches as level 0, and \"simple\" n-palindrome sandwiches as level 1.\n",
+    "Next, a palindrome MULTIsandwich is a palindrome sandwich $AB\\bar A$ where \n",
+    "* $A$ is a string or a palindrome sandwich\n",
+    "* $B$ is a string of length 3\n",
+    "* $\\bar A$ is $A$ backwards. (If $A$ is a palindrome sandwich, then so is $\\bar A$.) \n",
+    "\n",
+    "The \"level\" of the multisandwich is the number of nested palindrome sandwiches. Non-sandwiches have level 0, and \"simple\" palindrome sandwiches have level 1.\n",
     "\n",
     "Examples:\n",
     "\n",
-    "* \"racecarBRAKEracecar\" is a 5-palindrome multisandwich level 2, since it's a 5-palindrome sandwich, and since \"racecar\" is also a 5-palindrome sandwich.\n",
-    "* \"helloGOODBYEolleh\" is a 7-palindrome multisandwich level 1.\n",
-    "* \"barkDOGbark\" is a not a palindrome sandwich, so it has level 0.\n",
+    "* \"racecarGO!racecar\" has level 2, since \"racecar\"+\"GO!\"+\"racecar\" is a palindrome sandwich, and \"ra\"+\"cec\"+\"ar\" is also a palindrome sandwich, but \"ra\" is not a palindrome sandwich since it has length less than 5.\n",
+    "* \"alexa---axela\" has level 2, since \"alexa\"+\"---\"+\"alexa\" is a palindrome sandwich and \"a\"+\"lex\"+\"a\" is also a palindrome sandwich, but \"a\" is not a palindrome sandwich since it has length less than 5. \n",
+    "* \"helloBYEolleh\" has level 1, since \"hello\"+\"BYE\"+\"olleh\" is a palindrome sandwich, but \"h\"+\"ell\"+\"o\" is not a palindrome sandwich since \"h\"!=\"o\".\n",
     "\n",
-    "Write a recursive function palindrome3_multisandwich_level(s) which determines whether s is a 3-palindrome sandwich, and if so, then checks whether $A$ is a 3-palindrome sandwich, and so on, ultimately returning the level, i.e. the number of nested palindrome sandwiches. The function should return an integer, with 0 representing \"not a 3-palindrome multisandwich\", 1 representing a \"simple\" 3-palindrome multisandwich.\n",
+    "Nonexamples:\n",
     "\n",
-    "This function may call is_palindrome3_sandwich from the previous part. Once again, consider what are your base cases, and what is your recursive step?\n",
+    "* \"barkDOGbark\" is NOT a palindrome sandwich, so it has level 0.\n",
+    "* \"laptop\" is NOT a palindrome sandwich, so it has level 0.\n",
+    "\n",
+    "Write a recursive function palindrome_multisandwich(s) which determines whether s is a palindrome multisandwich, and what level it is. It should first check whether s is a palindrome sandwich, then whether $A$ is a palindrome sandwich, and so on. The function should return an integer, with 0 representing \"not a palindrome sandwich\", 1 representing a \"simple\" palindrome sandwich, etc.\n",
+    "\n",
+    "This function may call is_palindrome_sandwich from the previous part. Once again, first define the base case and the recursive step.\n",
     "\n",
     "Test cases:"
    ],
@@ -204,10 +276,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "3\n2\n1\n0\n0\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(palindrome_multisandwich(\"racecarGO!racecar---racecar!OGracecar\"))\n",
+    "print(palindrome_multisandwich(\"alexa---axela\"))\n",
+    "print(palindrome_multisandwich(\"helloBYEolleh\"))\n",
+    "print(palindrome_multisandwich(\"barkDOGbark\"))\n",
+    "print(palindrome_multisandwich(\"laptop\"))"
+   ]
   },
   {
    "source": [
@@ -223,7 +309,7 @@
     "\n",
     "Your goal is to write a recursive function cantor_dart_throw(x) that, given a float input x, returns True or False whether x is in the Cantor set.\n",
     "\n",
-    "(Suggestion: Define a default argument \"interval=None\". Within the function, check if interval is None, and in that case set interval=\\[0,1\\]. If x is outside interval, or in the middle third, return False. If x is inside the the 1st or 3rd third and within 8 decimal places of an interval endpoint, return True. Otherwise, return cantor_dart_throw(x, new_interval) with new_interval defined as the appropriate third.)\n",
+    "(Suggestion: Define a default argument \"interval=None\". Within the function, check if interval is None, and in that case set interval=\\[0,1\\]. If x is outside interval, or in the middle third, return False. If x is inside the the 1st or 3rd third and within 4 decimal places of an interval endpoint, return True. Otherwise, return cantor_dart_throw(x, new_interval) with new_interval defined as the appropriate third.)\n",
     "\n",
     "Test cases:"
    ],
@@ -232,20 +318,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "Does Cantor set contain 15?  False\nDoes Cantor set contain 0?  True\nDoes Cantor set contain 1/9?  True\nDoes Cantor set contain 1/2?  False\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "print(\"Does Cantor set contain 15? \", cantor_dart_attempt(15))\n",
-    "print(\"Does Cantor set contain 0? \", cantor_dart_attempt(0))\n",
+    "print(\"Does Cantor set contain 15? \", cantor_dart_throw(15))\n",
+    "print(\"Does Cantor set contain 0? \", cantor_dart_throw(0.000000))\n",
     "print(\"Does Cantor set contain 1/9? \", cantor_dart_attempt(1/9))\n",
     "print(\"Does Cantor set contain 1/2? \", cantor_dart_attempt(1/2))"
    ]
@@ -277,11 +355,13 @@
    "source": [
     "## 5. Create your own recursive sequence\n",
     "\n",
-    "Consider the Fibonacci sequence $F_n$ defined in a lecture example, or the Great number sequence defined in Problem 1, and create a numerical recursive sequence $R_n$ using the following rules:\n",
+    "Consider the Fibonacci sequence $F_n$ defined in a lecture example, or the Great number sequence $G_n$ defined in Problem 1.\n",
+    "\n",
+    "Create a numerical recursive sequence $R_n$ using the following rules:\n",
     "\n",
     "* $R_n$ is a sequence defined on all $n\\geq 0$\n",
-    "* Define several base cases $R_0$, ..., $R_{k-1}$\n",
-    "* Define your recursive step. $R_n$ should be based on up at least 3 previous steps within the range of your $k$ base cases. You can add, multiply, subtract, etc.\n",
+    "* Define several base cases $R_0$, ..., $R_{k-1}$ with $k\\geq3$\n",
+    "* Define your recursive step. $R_n$ should be calculated based on at least 3 previous steps within the range of your $k$ base cases. You can add, multiply, subtract, etc.\n",
     "\n",
     "Encode your recursive sequence with a recursive function recursive(n)."
    ],
@@ -290,7 +370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -299,7 +379,7 @@
   },
   {
    "source": [
-    "Next, without changing your recursive step, can you choose base cases $R_0$, ..., $R_k$ such that...\n",
+    "Next, without changing your recursive step, can you choose base cases $R_0$, ..., $R_{k-1}$ such that...\n",
     "\n",
     "* For $n=0,1,...,100$, $R_n$ appears to approach positive infinity.\n",
     "* For $n=0,1,...,100$, $R_n$ appears to approach negative infinity.\n",
