--- a/worksheets/worksheet6.ipynb
+++ b/worksheets/worksheet6.ipynb
@@ -1,37 +1,17 @@
 {
- "metadata": {
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.8.5-final"
-  },
-  "orig_nbformat": 2,
-  "kernelspec": {
-   "name": "python3",
-   "display_name": "Python 3",
-   "language": "python"
-  }
- },
- "nbformat": 4,
- "nbformat_minor": 2,
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "# Worksheet 6\n",
     "\n",
     "## MCS 275 Spring 2021 - Jennifer Vaccaro"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "### Instructions:\n",
     "\n",
@@ -40,12 +20,14 @@
     "Some problems involve counting recursive steps, tracking function runtime, or memoization. [Here](https://github.com/daviddumas/mcs275spring2021/blob/master/samplecode/recursion/decs.py) is a decorator module that you may download and import to help implement these features.\n",
     "\n",
     "Here are links to relevant recent lectures:\n",
-    "* Lecture "
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+    "* [Lecture 12 - Recursion](http://dumas.io/teaching/2021/spring/mcs275/slides/lecture12.html)\n",
+    "* [Lecture 13 - Recursion vs iteration](http://dumas.io/teaching/2021/spring/mcs275/slides/lecture13.html)\n",
+    "* [Lecture 14 - Recursion vs iteration II](http://dumas.io/teaching/2021/spring/mcs275/slides/lecture14.html)\n"
+   ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "## 1. Great sequence and decorators\n",
     "\n",
@@ -59,9 +41,7 @@
     "Write a function great(n) that calculates the nth Great number recursively. That is, the function great should call itself for some inputs n.\n",
     "\n",
     "Test cases:"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
@@ -69,10 +49,12 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
-      "The 1st Great number is 3\nThe 3rd Great number is 2\nThe 10th Great number is 164\n"
+      "The 1st Great number is 3\n",
+      "The 3rd Great number is 2\n",
+      "The 10th Great number is 164\n"
      ]
     }
    ],
@@ -83,15 +65,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "For the second part of this problem, you will use memoization. Memo-izing a function allows you to \"save\" previous pairs of inputs and outputs as base cases, so you can use less recursive depth.\n",
     "\n",
     "For example, suppose you calculate great(3) and then calculate great(6). Fince $G_6$ = $G_5$ - 3*$G_3$, and you have already calculated $G_3$, your function could incorporate the previously calculated value as a base case.\n",
     "\n",
     "Write another function great\\_memo(n) that uses the memoization decorator from decs.py. Compare the performance of both great functions for inputs 1,10,20,30."
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
@@ -101,10 +83,13 @@
    },
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
-      "The 1st Great number is 3 3\nThe 10th Great number is 164 164\nThe 50th Great number is -22828 -22828\nThe 50th Great number is -124723 -124723\n"
+      "The 1st Great number is 3 3\n",
+      "The 10th Great number is 164 164\n",
+      "The 50th Great number is -22828 -22828\n",
+      "The 50th Great number is -124723 -124723\n"
      ]
     }
    ],
@@ -117,6 +102,8 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "## 2. Prime Factorization\n",
     "\n",
@@ -137,9 +124,7 @@
     "* What is the recursive step? (How do we break pf(n) into pieces which incorporate pf called on a smaller input?)\n",
     "\n",
     "Test cases:"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
@@ -147,10 +132,12 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
-      "The prime factorization of 15 is [5, 3]\nThe prime factorization of 81 is [3, 3, 3, 3]\nThe prime factorization of 17 is [17]\n"
+      "The prime factorization of 15 is [5, 3]\n",
+      "The prime factorization of 81 is [3, 3, 3, 3]\n",
+      "The prime factorization of 17 is [17]\n"
      ]
     }
    ],
@@ -161,15 +148,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "The greatest common denominator $gcd(a,b)$ is the largest integer that evenly divides both $a$ and $b$. One way to calculate the gcd is to use the product of all common prime factors of $a$ and $b$. If $a$ and $b$ share no prime factors, then $gcd(a,b) = 1$.\n",
     "\n",
     "Write a function gcd(a,b) that calculates the greatest common divisor and calls your function pf. (The function does not need to be recursive.)\n",
     "\n",
     "As an added challenge, can you improve the performance of pf and gcd using memoization?"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
@@ -177,10 +164,13 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
-      "5\n1\n11\n120\n"
+      "5\n",
+      "1\n",
+      "11\n",
+      "120\n"
      ]
     }
    ],
@@ -192,6 +182,8 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "## 3. Palindrome Sandwiches\n",
     "\n",
@@ -220,9 +212,7 @@
     "* What would be the recursive step?\n",
     "\n",
     "Test cases:\n"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
@@ -230,10 +220,14 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
-      "True\nTrue\nTrue\nFalse\nFalse\n"
+      "True\n",
+      "True\n",
+      "True\n",
+      "False\n",
+      "False\n"
      ]
     }
    ],
@@ -246,6 +240,8 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "Next, a palindrome MULTIsandwich is a palindrome sandwich $AB\\bar A$ where \n",
     "* $A$ is a string or a palindrome sandwich\n",
@@ -270,9 +266,7 @@
     "This function may call is_palindrome_sandwich from the previous part. Once again, first define the base case and the recursive step.\n",
     "\n",
     "Test cases:"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
@@ -280,10 +274,14 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
-      "3\n2\n1\n0\n0\n"
+      "3\n",
+      "2\n",
+      "1\n",
+      "0\n",
+      "0\n"
      ]
     }
    ],
@@ -296,6 +294,8 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "## 4. Cantor set darts\n",
     "\n",
@@ -312,9 +312,7 @@
     "(Suggestion: Define a default argument \"interval=None\". Within the function, check if interval is None, and in that case set interval=\\[0,1\\]. If x is outside interval, or in the middle third, return False. If x is inside the the 1st or 3rd third and within 4 decimal places of an interval endpoint, return True. Otherwise, return cantor_dart_throw(x, new_interval) with new_interval defined as the appropriate third.)\n",
     "\n",
     "Test cases:"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
@@ -329,15 +327,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "For second part of this problem, you will want to determine how many recursive steps were required to get you an answer of True/False. You can modify cantor_dart_throw to use the count_calls decorator from decs.py. \n",
     "\n",
     "Then, find an input x that requires at least 10 calls. Can you find one that returns True and one that returns False? What is the maximum depth of recursion possible in your program?\n",
     "\n",
     "Test cases:"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
@@ -352,6 +350,8 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "## 5. Create your own recursive sequence\n",
     "\n",
@@ -364,9 +364,7 @@
     "* Define your recursive step. $R_n$ should be calculated based on at least 3 previous steps within the range of your $k$ base cases. You can add, multiply, subtract, etc.\n",
     "\n",
     "Encode your recursive sequence with a recursive function recursive(n)."
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
@@ -378,6 +376,8 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "Next, without changing your recursive step, can you choose base cases $R_0$, ..., $R_{k-1}$ such that...\n",
     "\n",
@@ -385,9 +385,7 @@
     "* For $n=0,1,...,100$, $R_n$ appears to approach negative infinity.\n",
     "* Within $n=0,1,...,100$, $R_n$ has a cycle of size $k$ or greater.\n",
     "* For $n=0,1,...,100$, the ratio $R_n / R_{n+1}$ appears to approach a constant value."
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
@@ -410,5 +408,26 @@
     "    print(\"ratio ({}/{}) = {}\".format(5*n, 5*n-1, r_5n/r_5n_minus_1))"
    ]
   }
- ]
+ ],
+ "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.8.5"
+  }
+ },
+ "nbformat": 4,
+ "nbformat_minor": 2
 }
