Update with sample data and modules policy

--- a/projects/project2.ipynb
+++ b/projects/project2.ipynb
@@ -157,7 +157,19 @@
     "\n",
     "### No character set limitations\n",
     "\n",
-    "Your functions should allow anything that Python considers to be a character to appear in the string.  You must not impose extra assumptions (e.g. assuming all of the characters will be in the set `A-Z`, `a-z`, or `0-9` would be an error)."
+    "Your functions should allow anything that Python considers to be a character to appear in the string.  You must not impose extra assumptions (e.g. assuming all of the characters will be in the set `A-Z`, `a-z`, or `0-9` would be an error).\n",
+    "\n",
+    "### Prohibited and allowed modules\n",
+    "\n",
+    "Code you submit for this project is not allowed to import the `re` module.  (That's a module that contains functions which perform pattern matching on strings, potentially allowing you to circumvent the difficult parts of this assignment.)\n",
+    "\n",
+    "**I don't think you will need to import any modules at all** in your solution, but the following modules are permitted if you find them useful for any reason (perhaps for testing):\n",
+    "* `sys`\n",
+    "* `os`\n",
+    "* `math`\n",
+    "* `random`\n",
+    "\n",
+    "**If you want to use a module that is not listed above, contact the instructor to request approval.**  If approval is given, the project description will be updated accordingly.  Submissions that import modules not listed on the project description will be penalized."
    ]
   },
   {
@@ -166,7 +178,41 @@
    "source": [
     "## Sample data\n",
     "\n",
-    "During the week of Feb 15-19, 2021, a set of text files will be released containing examples of strings that are eggs, supereggs, hypereggs, and strings that do not belong to each of these categories.  Providing these is intended to help you test your project locally (and before the autograder is ready).  The project description will be updated with links to the data files when they are released."
+    "It is strongly recommended that you test the functions in your `eggs` module against the following sample data.  Each is a text file containing one string per line.  You'll need to write your own Python script to read these files line by line and check whether your functions behave as expected on these inputs.\n",
+    "\n",
+    "Remember that when you read a line of text from a text file, it usually has a newline character at the end (which needs to be removed before you check whether it is an egg/superegg/hyperegg).  The recommended way to deal with this is to check for a newline character at the end of a line and remove it if present, e.g. using code like"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Suppose you've already read one line of text from the file\n",
+    "# and stored it in a variable called `line`\n",
+    "\n",
+    "if line and line[-1] == \"\\n\":  # (`line` nonempty) and (`line` ends with \"\\n\")\n",
+    "    # remove the trailing newline\n",
+    "    line = line[:-1]\n",
+    "\n",
+    "# Now use `line`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Links to sample data files\n",
+    "\n",
+    "* [eggs.txt](https://dumas.io/teaching/2021/spring/mcs275/project2/eggs.txt) --- 1000 eggs, one per line\n",
+    "* [not_eggs.txt](https://dumas.io/teaching/2021/spring/mcs275/project2/not_eggs.txt) --- 1000 strings that are not eggs, one per line.  (Some lines may be blank, because the empty string is not an egg.)\n",
+    "* [supereggs.txt](https://dumas.io/teaching/2021/spring/mcs275/project2/supereggs.txt) --- 1000 supereggs, one per line\n",
+    "* [not_supereggs.txt](https://dumas.io/teaching/2021/spring/mcs275/project2/not_supereggs.txt) --- 1000 strings that are not supereggs, one per line.  (Some lines may be blank, because the empty string is not a superegg.)\n",
+    "* [hypereggs.txt](https://dumas.io/teaching/2021/spring/mcs275/project2/hypereggs.txt) --- 1000 supereggs, one per line\n",
+    "* [not_hypereggs.txt](https://dumas.io/teaching/2021/spring/mcs275/project2/not_hypereggs.txt) --- 1000 strings that are not hypereggs, one per line.  (Some lines may be blank, because the empty string is not a hyperegg.)\n",
+    "\n",
+    "You'll want to download (save) these files, rather than just view them in your browser."
    ]
   },
   {
@@ -184,6 +230,7 @@
    "source": [
     "## Revision History\n",
     "\n",
+    "* 2021-02-17 Sample data links added; New section about allowed/prohibited modules\n",
     "* 2021-02-11 Initial publication"
    ]
   }
