Project 2 autograder released

--- a/projects/project2.ipynb
+++ b/projects/project2.ipynb
@@ -29,7 +29,21 @@
     "Contact the instructor or TA by email, or visit office hours.\n",
     "\n",
     "### What to do if you're stuck\n",
-    "Contact the instructor or TA by email, or visit office hours."
+    "Contact the instructor or TA by email, or visit office hours.\n",
+    "\n",
+    "### Grading breakdown\n",
+    "\n",
+    "This is a summary of how the 25 points on the project will be divided.\n",
+    "\n",
+    "| Points | Item |\n",
+    "| --- | :--- |\n",
+    "| 4.0 | manual code review |\n",
+    "| 4.0 | autograder basic tests (files present, syntax, etc) |\n",
+    "| 7.5 | autograder tests of `is_egg` |\n",
+    "| 3.5 | autograder tests of `is_superegg_recursive` |\n",
+    "| 3.5 | autograder tests of `is_superegg_iterative` |\n",
+    "| 2.5 | autograder tests of `is_hyperegg` |\n",
+    "| **25.0** | total |"
    ]
   },
   {
@@ -219,9 +233,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Autograder release date\n",
+    "## Autograder available\n",
     "\n",
-    "The Project 2 autograder will be released (in Gradescope) on or before Mon Feb 22, 2021."
+    "The autograder is available in Gradescope as of 2021-02-20."
    ]
   },
   {
@@ -230,6 +244,7 @@
    "source": [
     "## Revision History\n",
     "\n",
+    "* 2021-02-20 Add info about grading breakdown and autograder release\n",
     "* 2021-02-17 Sample data links added; New section about allowed/prohibited modules\n",
     "* 2021-02-11 Initial publication"
    ]
