--- a/quizzes/quiz6.ipynb
+++ b/quizzes/quiz6.ipynb
@@ -63,9 +63,9 @@
     "\n",
     "Here are some examples:\n",
     "\n",
-    "* `pentafactorial(17) = 17 * 12 * 8 * 3 = 2856`\n",
+    "* `pentafactorial(17) = 17 * 12 * 7 * 2 = 2856`\n",
     "* `pentafactorial(10) = 10 * 5 = 50`\n",
-    "* `pentafacotrial(21) = 21*16*11*5*1 = 22176`\n",
+    "* `pentafacotrial(21) = 21*16*11*6*1 = 22176`\n",
     "* `pentafactorial(6) = 6*1 = 6`\n",
     "* `pentafactorial(5) = 5`\n",
     "* `pentafactorial(4) = 1`\n",
@@ -98,6 +98,16 @@
     "```\n",
     "\n",
     "Write a **recursive** function called `abbc(n)` that takes a nonnegative integer `n` and returns the value of $Q_n$.  Save it in a file called `quiz6prob3.py` and include this file in your quiz submission."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Revision history\n",
+    "\n",
+    "* 2021-02-21 3:00pm CST - Corrected two typos in factor lists\n",
+    "* 2021-02-21 12:00pm CST - Initial publication"
    ]
   }
  ],
