Delete cursed problem 2

--- a/quizzes/quiz6.ipynb
+++ b/quizzes/quiz6.ipynb
@@ -32,14 +32,15 @@
     "\n",
     "### Point distribution\n",
     "\n",
-    "This quiz has **2 problems** (numbered 2 and 3), each worth 4 points.  Therefore, the final grading breakdown is:\n",
+    "This quiz has **2 problems** (numbered 2 and 3), each worth 4 points.   Therefore, the final grading breakdown is:\n",
     "\n",
     "| Points | Item |\n",
     "| --- | --- |\n",
     "| 3 | autograder |\n",
     "| 4 | problem 2 |\n",
     "| 4 | problem 3 |\n",
-    "| **11** | total |"
+    "| **11** | total |\n",
+    "\n"
    ]
   },
   {
@@ -55,25 +56,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Problem 2: Pentafactorial\n",
+    "## Problem 2 deleted\n",
     "\n",
-    "Let `n` be a positive integer.  The *pentafactorial* of `n` is the integer obtained as follows:\n",
-    "* If `n` is less than 5, the pentafactorial of `n` is defined to be 1\n",
-    "* Otherwise, the pentafactorial of `n` is the product of all the positive integers that can be obtained by subtracting multiples of 5 from `n`.\n",
-    "\n",
-    "Here are some examples:\n",
-    "\n",
-    "* `pentafactorial(17) = 17 * 12 * 7 * 2 = 2856`\n",
-    "* `pentafactorial(10) = 10 * 5 = 50`\n",
-    "* `pentafacotrial(21) = 21*16*11*6*1 = 22176`\n",
-    "* `pentafactorial(6) = 6*1 = 6`\n",
-    "* `pentafactorial(5) = 5`\n",
-    "* `pentafactorial(4) = 1`\n",
-    "* `pentafactorial(3) = 1`\n",
-    "\n",
-    "(Notice this is similar to factorial, but you move downward in steps of 5 instead of steps of 1.)\n",
-    "\n",
-    "Write a **recursive** function named `pentafactorial(n)` that takes a positive integer `n` and returns its pentafactorial.  Save it in a file called `quiz6prob2.py` and include this file in your quiz submission."
+    "**Everyone gets 4 points for this problem, because the original problem that was given was harder and less instructive than intended.**"
    ]
   },
   {
@@ -106,6 +91,7 @@
    "source": [
     "### Revision history\n",
     "\n",
+    "* 2021-02-23 Delete problem 2 after realizing `pentafactorial(n)` is not equal to `n*pentafactorial(n-5)` if you use the definition given\n",
     "* 2021-02-21 3:00pm CST - Corrected two typos in factor lists\n",
     "* 2021-02-21 12:00pm CST - Initial publication"
    ]
