Add diagram of a complex hyperegg

--- a/projects/project2.ipynb
+++ b/projects/project2.ipynb
@@ -230,6 +230,20 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### A diagrammed hyperegg\n",
+    "\n",
+    "In response to a student question about Project 2, I created the following diagram showing that the string on line 643 of [hypereggs.txt](https://dumas.io/teaching/2021/spring/mcs275/project2/hypereggs.txt) is in fact a hyperegg:\n",
+    "\n",
+    "![hyperegg diagram](hyperegg.png)\n",
+    "\n",
+    "Each line above is a statement that it is a hyperegg, given what is known from the lines above it.  The colors highlight A, B, and B."
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -244,6 +258,7 @@
    "source": [
     "## Revision History\n",
     "\n",
+    "* 2021-02-23 Add hyperegg diagram\n",
     "* 2021-02-20 Add info about grading breakdown and autograder release\n",
     "* 2021-02-17 Sample data links added; New section about allowed/prohibited modules\n",
     "* 2021-02-11 Initial publication"
