--- a/projects/project2.ipynb
+++ b/projects/project2.ipynb
@@ -101,7 +101,7 @@
     "* Any superegg is also a hyperegg, because you can take `B` to be a single character\n",
     "* As a special case of the example above, any egg is also a hyperegg\n",
     "* `\"fooss\"` is a hyperegg, taking `A=\"foo\"` (which is a hyperegg) and `B=\"s\"`\n",
-    "* `\"alooloo\"` is a hyperegg, taking `A=\"l\"` and `B=\"loo\"` (which is a hyperegg)\n",
+    "* `\"alooloo\"` is a hyperegg, taking `A=\"a\"` and `B=\"loo\"` (which is a hyperegg)\n",
     "* `\"feefoofoo\"` is a hyperegg, taking `A=\"fee\"` (which is a hyperegg) and `B=\"foo\"` (which is a hyperegg)\n",
     "* `\"aseeseetoomiimiitoomiimii\"` is a hyperegg (you should check this!)\n",
     "* `\"gullability\"` is not a hyperegg, because there is no way to express it as `A+B+B` with `B` a nonempty string\n",
@@ -230,7 +230,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -258,6 +257,7 @@
    "source": [
     "## Revision History\n",
     "\n",
+    "* 2021-02-24 Fixed typo in explanation of hyperegg example \"alooloo\"\n",
     "* 2021-02-23 Add hyperegg diagram\n",
     "* 2021-02-20 Add info about grading breakdown and autograder release\n",
     "* 2021-02-17 Sample data links added; New section about allowed/prohibited modules\n",
