Add images and small fix

--- a/worksheets/worksheet7_soln.ipynb
+++ b/worksheets/worksheet7_soln.ipynb
@@ -179,6 +179,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "![maze image](images/prob2.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### 2.5 Solution movie\n",
     "\n",
     "If you complete problem 2 quickly and want something to do before moving on, try this:  Modify the solver script so that it saves every path ever considered by `solvemaze()` (at any point in the recursion) to a separate image file.  Give them names like `path001.png`, `path002.png`, etc..  Run this on a maze of moderate size (e.g. 9x9) and flip through the images in your platform's image viewer to make a crude animation of the recursive process.\n",
@@ -271,6 +278,14 @@
     "# Iterate through the list of intermediate paths and save a png highlighting each\n",
     "for i,p in enumerate(p_list):\n",
     "    M.save_png(\"movie/prob2{:03d}.png\".format(i),scale=30,highlight=p) # save the pngs inside a directory movie"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Here's what the images created this way look like if assembled into an animated GIF.  (That wasn't part of the worksheet, but is an easy way to show all of the images in sequence.)\n",
+    "![maze solver animation](images/prob20.gif)"
    ]
   },
   {
@@ -369,6 +384,13 @@
     "BM = BlockMaze(15)\n",
     "path = solvemaze(BM)\n",
     "BM.save_png(\"BlockMaze.png\",scale=30,highlight=path)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![maze with a big block in the middle](images/BlockMaze.png)"
    ]
   },
   {
@@ -527,6 +549,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "![empty maze](images/EmptyMaze.png)\n",
+    "![empty maze](images/EmptyMaze_straightline.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### 5. All dead ends\n",
     "\n",
     "Let's say a square in a maze is a dead end if there is exactly one free neighbor.\n",
@@ -640,6 +670,13 @@
     "path = solvemaze(M, dead_ends=dead_end_list)\n",
     "M.save_png(\"maze_deadends.png\",scale=30,highlight=dead_end_list)\n",
     "print(\"Dead ends: \", dead_end_list)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![dead ends](images/maze_deadends.png)"
    ]
   },
   {
@@ -850,7 +887,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -861,11 +898,8 @@
     "# Jennifer Vaccaro\n",
     "# This code is adjusted from an example from Prof Dumas in accordance with the syllabus.\n",
     "\n",
-    "def quicksort(L,start=0,end=None,depth=0):\n",
+    "def quicksort(L,start=0,end=None):\n",
     "    \"\"\"Reorder elements of L so that L[start:end] is sorted.\"\"\"\n",
-    "    # Uncomment the line below for verbose output\n",
-    "    # (this is the only place the `depth` argumen is used\n",
-    "    #print(\" \"*depth + \"quicksort({})\".format(L[start:end]))\n",
     "    if end == None:\n",
     "       end = len(L)\n",
     "\n",
@@ -881,8 +915,8 @@
     "    \n",
     "    # Recursive calls to quicksort will sort\n",
     "    # the sublists to either side of the pivot.\n",
-    "    quicksort(L,start,m,depth+1)\n",
-    "    quicksort(L,m,end,depth+1)\n",
+    "    quicksort(L,start,m)\n",
+    "    quicksort(L,m+1,end)\n",
     "\n",
     "def partition(L,start=0,end=None):\n",
     "    \"\"\"Look at L[start:end].  Take the middle element as a pivot.\n",
@@ -912,11 +946,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 1, 2, 2, 3, 4, 4, 5, 5]\n",
+      "Looks OK.\n"
+     ]
+    }
+   ],
    "source": [
     "# MCS 275 Spring 2021 Week 7 Problem 8\n",
     "# Jennifer Vaccaro\n",
@@ -924,18 +967,19 @@
     "\n",
     "# Create a list\n",
     "L = [5,4,3,2,1,0,2,4,5]\n",
+    "Lcopy = [ x for x in L ]\n",
     "\n",
-    "# Make sure that it sorts correctly\n",
+    "# Sort and print the result\n",
     "quicksort(L)\n",
-    "print(L)"
+    "print(L)\n",
+    "\n",
+    "# Make sure it gives the same thing as the built-in sort method\n",
+    "Lcopy.sort()\n",
+    "if L == Lcopy:\n",
+    "    print(\"Looks OK.\")\n",
+    "else:\n",
+    "    print(\"ERROR!\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
